# turbo-predict

./: .gitignore  README.md  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
notebooks/: N-CMAPSS_Example_data_loading_and_exploration.ipynb  backbone.pth  cnn_lstm_backbone.pth  cnn_lstm_training.ipynb  lstm_backbone.pth  lstm_training.ipynb  model_training.ipynb  transformer_backbone.pth  transformer_encoder_training.ipynb
scripts/: model_training.py  sample_creator_unit_auto.py
src/data/: data_preparation_unit.py  sample_creator.py  sample_creator_unit.py
