[project]
name = "turbo-predict"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow (>=2.20.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "mlflow (>=3.6.0,<4.0.0)",
    "fastapi (>=0.121.1,<0.122.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "dvc[s3] (>=3.63.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
